minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: minio-service
spec:
  type: ClusterIP
  ports:
    - name: console
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: endpoint
      port: 9000
      protocol: TCP
  selector:
    app: minio
