minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: minio.k8s.rodrigobaron.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 8080
